--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -121,7 +121,6 @@ body {
 	height: 150px;
 	width: 222px;
 	height: 30vh;
-	width: 19vw;
 	background-size: cover;
 	background-position: center;
 	overflow: hidden;
@@ -133,6 +132,10 @@ body {
 }
 .recipe-list > div:hover {
 	box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.recipe-list > div > a {
+	width: 222px;
 }
 
 .recipe-list > div > a h6 {
@@ -324,6 +327,12 @@ header h1 {
 	max-width: 100%;
 }
 
+@media screen and (max-width: 991px) {
+	.recipe-list {
+		grid-template-columns: 1fr 1fr 1fr;
+	}
+}
+
 @media screen and (max-width: 768px) {
 	.f-s-0-9 {
 		font-size: 1rem;
@@ -335,6 +344,10 @@ header h1 {
 
 	.container {
 		padding: 16px;
+	}
+
+	.partition > div {
+		padding: 0;
 	}
 
 	.form-container form input[type="text"] {
@@ -349,13 +362,16 @@ header h1 {
 		grid-template-columns: 1fr 1fr;
 	}
 
+	.recipe-list > div > a {
+		width: 190px;
+	}
 	.recipe-list .img {
-		/* height: 150px; */
-		/* width: 190px; */
+		height: 180px;
+		width: 190px;
 		/* width: 38vw; */
 		overflow: hidden;
-		width: 44vw;
-		height: 24vh;
+		/* width: 44vw;
+		height: 24vh; */
 	}
 
 	.recipe-list .flex.flex-direction-row {
@@ -367,6 +383,9 @@ header h1 {
 	}
 	.partition .partition-secondary {
 		width: 100%;
+	}
+	.partition-secondary {
+		margin-top: 16px;
 	}
 	.ingredient-list {
 		grid-template-columns: auto auto auto;
