--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,12 @@
-<%- include('partials/header') %>
-<div class="container bg-white f-s-0-9">
-	<% if ((responseData !== null ) && (responseData.length < 1)) { %>
+<%- include('partials/header') %> <% if ((responseData !== null ) &&
+(responseData.length < 1)) { %>
+<div class="container">
 	<div class="flex">
 		<h2>No result found.</h2>
 	</div>
-	<% } %> <% if (responseData !== null) { %>
+</div>
+<% } %> <% if (responseData !== null) { %>
+<div class="container f-s-0-9">
 	<div class="recipe-list">
 		<% responseData.forEach(recipe => { %>
 		<div class="flex flex-direction-row">
